# version-control-tools

./: .arcconfig  .dockerignore  .editorconfig  .hgignore  .readthedocs.yaml  .sops.yaml  .taskcluster.yml  .vagrantuser.example  CODE_OF_CONDUCT.md  README.md  README.rst  Vagrantfile  ansible.cfg  bugzilla  create-deploy-environment  create-environment  create-test-environment  d0cker  deploy  deploy-requirements.in  deploy-requirements.txt  docker-compose.yml  docs-requirements.in  docs-requirements.txt  hgmo  mach  moz.build  mozreview  ottoland  pulse  pyproject.toml  reviewboard  run  run-mercurial-tests.py  run-tests  start-local-mozreview  test-requirements-3.in  test-requirements-3.txt  test-requirements.in  test-requirements.txt  (+2 more)
ansible/: add-user-to-mirror.yml  ansible.cfg  autoland-ec2-provision.yml  autoland-seed-secrets.yml  bootstrap-hgweb.yml  deploy-autoland-dev.yml  deploy-autoland.yml  deploy-backup.yml  deploy-hgmo-extensions.yml  deploy-hgmo.yml  deploy-hgssh.yml  deploy-hgweb.yml  deploy-kafka.yml  deploy-mirrors.yml  deploy-monitoring.yml  deploy-mozreview-ci.yml  deploy-mozreview-dev.yml  deploy-mozreview-prod.yml  deploy-reviewbot.yml  docker-hgmaster.yml  docker-hgrb.yml  docker-hgweb.yml  docker-rbweb.yml  hgmo-create-s3-bundle.yml  hgmo-new-l10n-channel.yml  hgmo-reclone-repos.yml  hgmo-reset-twig.yml  hgmo-retire-repo.yml  hgmo-stream-clone-repo.yml  hgmo-strip-repo.yml  hgmo.yml  hosts  hosts_autoland_dev  hosts_autoland_prod  mozreview-create-repo.yml  provision-autoland.yml  reviewboard-dev.yml  test-hgmaster.yml  test-hgweb.yml  vcssync-deploy.yml  (+1 more)
ansible/files/: aws-ip-ranges.json  peep.py  requirements-ansible-1.9.in  requirements-ansible-1.9.txt  requirements-ansible.in  requirements-ansible.txt  systemd-mail-unit-output  systemd-mail-unit-output@.service
ansible/group_vars/: all  hgmo  hgweb-mirrors
ansible/host_vars/: autoland-dev.allizom.org.yml  autoland.mozilla.org.yml
ansible/tasks/: cinnabarclone.yml  deploy-autoland.yml  download-mercurial.yml  hgmo-bundle-cron.yml  hgmo-extensions.yml  install-mozreview.yml  install-uv.yml  pygments.yml  systemd-mail-unit-output.yml  virtualenv-uv.yml  virtualenv.yml  virtualenv3.yml
ansible/vendor-roles/: requirements.yml
autoland/: Dockerfile  README.md  deploy-autoland.sh  docker-compose.yml  fig.yml  requirements.txt
autoland/apache/: autoland.conf
autoland/autoland/: autoland.py  autoland.wsgi  autoland_pulse.py  autoland_rest.py  bugzilla.py  config.py  github.py  lando.py  mercurial.py  mozdef.py  mozilla_ldap.py  mozreview.py  patch_helper.py  selfserve.py  test_autoland.py  test_autoland_pulse.py  transplant.py  treestatus.py
autoland/hg/: autoland_hgrc
autoland/hgext/: rewritecommitdescriptions.py
autoland/logrotate/: autoland
autoland/sql/: 0001-add-pullrequest.sql  0002-add-mozreview-update.sql  0003-drop-testrun.sql  0004-support-non-try-destinations.sql  0005-add-last-updated.sql  0006-store-request-json.sql  0007-normalize-mozreviewupdate.sql  0008-drop-importpullrequest.sql  0009-add-created.sql  add-pullrequest.sql  createdb.sh  schema.sql  updatedb.sh
autoland/testing/: test_autoland.py  test_autoland_pulse.py  test_integration.py
autoland/tests/: test-autoland-closed-tree.t  test-autoland-merge.t  test-patch-helper.py  test-post-autoland-job-from-patch.t  test-post-autoland-job-from-repo.t  test_autoland.py  (+3 more)
cross-channel-l10n/: prod-requirements.txt  setup.py  test-requirements.txt
docs/: Makefile  conf.py  contributing.rst  githubwebhooks.rst  hacking-mozreview.rst  headless-repositories.rst  hgcustom.rst  hgext.rst  hghooks.rst  index.rst  mozreview-user.rst  mozreview.rst  reviewboard.rst  server.rst  settings_local.py  testing.rst  vcs-server-info  vcs-server-info.asc  vcssync.rst
git/: cinnabar-debug-push.py
github-webhooks/: lambda-requirements.in  lambda-requirements.txt  lambda_pulse.py  lambda_receive.py
hgext/: bootstrap.py
hghooks/: .hgignore  convert-pushlog-db.py  example-hgrc  hg_record_changeset_info  hg_require_single_head  runtests.py  setup.py  tamarin-hook.py  test-convert.sh  test-hook.sh  test-lots-of-checkins.sh  test-merges.sh
hgserver/: clonebundles.py
hgtemplates/: .hgtags  map-json
hgweb-bundle/: bundleserve.cgi  httpd-000-default.conf
hgwsgi/: bootstrap.py  hgweb.config  hgweb.wsgi  hgwebdir.wsgi  robots.txt
mozreviewpulse/: .editorconfig  Makefile  requirements.txt  setup.py
scripts/: adjust-mtime-from-pushlog.py  aggregate-s3-bucket-logs  audit-user-wsgi-dirs.py  check_kafka_hg_heartbeat  check_try_heads  check_zookeeper  cleanup-parsed-hg-logs  clone-gaia-l10n.sh  count-repo-pushes  create-hg-repo-manifest  download-verify  find-hg-repos.py  firefox-releases  generate-hg-s3-bundles  get_b2g_locales.py  hg-master-start-stop  hg-repo-import-subtree.sh  httpd-authn-bugzilla-key  ldap-lookup-ssh-key  mirror-pull  mozreview-associate-ldap  new-channel-l10n-repo  normalize-hgweb-permissions  nuke-and-pave-repo-pushlog.sh  outputif  publish-to-sns  push-repo.sh  record-pushes.sh  repo-permissions  repo-push.sh  reset_pp_repo.sh  s3-daily-totals  scan-configs.py  scrape-manifest-ip-ranges.py  scrape-mozilla-ip-ranges.py  sync-hg-repos-from-manifest  try_replicatesync_run.py  update-hg-access-date-from-pushlog  update-repo-mtimes  upgrade-hg-repos.py  (+2 more)
terraform/: main.tf  variables.tf  versions.tf
testing/: Dockerfile.taskcluster  advanced_url_intercept.py  bugzilla.py  clobber.bmobootstrap  clobber.bmofetch  clobber.hgmaster  clobber.hgrb  clobber.hgweb  clobber.vct  create-virtualenv  docker-control.py  exclude_reviewboard.txt  find-bad-imports.py  firefoxrepos.sh  flaky-tests.txt  hgcluster-docker-compose.yml  hghave.py  http-request.py  local-mozilla-repos.py  mozreview-repo.py  mozreview-ssh  py3-failing.txt  refreshinghgwebdir.py  requirements-hgdev-docker.in  requirements-hgdev-docker.txt  requirements-hgdev.in  requirements-hgdev.txt  setup.py  taskcluster-run-tests  url-intercept.py  xmldump.py
vcssync/: prod-requirements.in  prod-requirements.txt  setup.py  test-requirements.in  test-requirements.txt
(+1741 files in other folders)
