# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[project]
name = "version-control-tools"
version = "0.0.0"
requires-python = ">=3.9"

# Dependency groups for all environments. Server deployment groups are
# compiled into `.txt` files via `./upgrade-python-packages`. Local
# development uses `uv sync --group dev`.
[dependency-groups]
# Shared dependency set for vcsreplicator (included by other groups).
vcsreplicator-deps = [
    "cbor2==4.1.2",
    "kafka-python==1.4.6",
    "kombu",
    "python-hglib",
]

ansible = [
    "ansible==4.8.0",
]

deploy-deps = [
    { include-group = "ansible" },
    # Without a lower bound, uv's resolver backtracks to a 2018-era boto3
    # on Python 3.9; pip-compile didn't have this problem.
    "boto3>=1.28",
    "mach==1.0.0",
    "mercurial==6.5.2",
]

deploy = [
    { include-group = "deploy-deps" },
    "vcttesting",
]

test-deps = [
    { include-group = "deploy-deps" },
    { include-group = "vcsreplicator-deps" },
    "backports.lzma",
    "black==22.12.0",
    "coverage",
    # docker-py 7.x is incompatible with docker-compose 1.29.2
    "docker<7",
    "docker-compose",
    # requests 2.32 breaks http+docker scheme used by docker-py <7.1.0 (https://github.com/docker/docker-py/issues/3256)
    "requests<2.32",
    "flake8",
    "lockfile",
    "mock",
    "mechanize",
    "nose",
    "Pygments==2.3.1",
    "pytest",
    "python-hglib",
    "python-ldap",
    "responses",
    "sentry-sdk",
]

# `test` is a thin alias over `test-deps` so `dev` can pull in the same
# deps without `include-group`'ing `test` directly (which `[tool.uv]
# conflicts` forbids, since `test` and `dev` are listed as conflicting).
test = [{ include-group = "test-deps" }]

docs = [
    "sphinxcontrib-blockdiag",
    "sphinxcontrib-nwdiag",
    "sphinxcontrib-seqdiag",
    "Sphinx",
    "sphinx-rtd-theme",
    "backports.lzma",
    "docker<2.6",
    "coverage",
    "futures",
    "mach==0.5.1",
    "mercurial==6.5.2",
    "PyYAML",
    "setuptools",
]

hgweb = [
    "boto3",
    "cbor2==4.1.2",
    "ipaddress",
    "mercurial==6.8.2",
    "Pygments==2.1.3",
]

hg-web-replication = [
    "boto3",
    "cbor2==4.1.2",
    "kafka-python==1.4.6",
    "mercurial==6.8.2",
    "pygments",
    "python-hglib",
    "PyYAML",
    "six",
    "tabulate",
]

hg-web-tools = [
    "boto3",
    "cbor2==4.1.2",
    "mercurial==6.8.2",
    "python-hglib",
    "requests",
    "tabulate",
]

hg-web-tools-py3 = [
    "cbor2==4.1.2",
    "datadiff",
    "requests",
    "voluptuous",
]

hg-ssh-tools = [
    { include-group = "vcsreplicator-deps" },
    "boto3",
    "boto",
    "mercurial==6.9.5",
    "python-hglib",
    "python-ldap>=3.4.2",
    "tabulate",
]

hg-ssh-bundles = [
    "boto3",
    "google-cloud-storage",
    "kafka-python==1.4.6",
    "mercurial==6.9.5",
    "python-hglib==2.6.1",
]

hg-ssh-pash = [
    "kafka-python==1.4.6",
    "mercurial==6.9.5",
    "python-ldap",
    "sentry-sdk==0.7.14",
    "six",
]

hg-ssh-testing = [
    "moto[server]==1.0.0",
]

# Local editable packages shared across dev environments.
local-common = [
    "mozilla-hg-hooks",
    "bugsy",
    "mozhg",
    "pushlog-client",
    "mozautomation",
    "vcttesting",
]

# Additional local packages only needed for the full test environment.
local-test = [
    { include-group = "local-common" },
    "hgmolib",
    "mozansible",
    "vcsreplicator",
]

# Local dev environment.
dev = [
    { include-group = "test-deps" },
    { include-group = "local-test" },
]

[tool.uv]
# S3 mirror for Mozilla packages (used during resolution).
find-links = ["https://s3-us-west-2.amazonaws.com/moz-packages/pypi/index.html"]

# These groups are never installed together (they target separate
# virtualenvs on different servers), so uv can resolve different
# versions of the same package across them.
conflicts = [
    [
        { group = "deploy-deps" },
        { group = "deploy" },
        { group = "test" },
        { group = "dev" },
        { group = "docs" },
        { group = "hgweb" },
        { group = "hg-web-replication" },
        { group = "hg-web-tools" },
        { group = "hg-web-tools-py3" },
        { group = "hg-ssh-tools" },
        { group = "hg-ssh-bundles" },
        { group = "hg-ssh-pash" },
        { group = "hg-ssh-testing" },
    ],
]

[tool.uv.sources]
# Editable installs of internal packages.
mozilla-hg-hooks = { path = "hghooks", editable = true }
bugsy = { path = "pylib/Bugsy", editable = true }
mozhg = { path = "pylib/mozhg", editable = true }
pushlog-client = { path = "pylib/mozhginfo", editable = true }
mozautomation = { path = "pylib/mozautomation", editable = true }
vcttesting = { path = "testing", editable = true }
hgmolib = { path = "hgserver/hgmolib", editable = true }
mozansible = { path = "pylib/mozansible", editable = true }
vcsreplicator = { path = "pylib/vcsreplicator", editable = true }

[tool.ruff]
target-version = "py39"
